@@ -1,3 +1,8 @@
+2002-02-07  Richard Henderson  <rth@redhat.com>
+
+	* adaint.c (__gnat_to_gm_time): First arg is int, not time_t.
+	* adaint.h (__gnat_to_gm_time): Update prototype.
+
 2002-01-30  Richard Henderson  <rth@redhat.com>
 
 	* trans.c (tree_transform) [N_Loop_Statement]: Use
